--- a/capi/geos_c.h.in
+++ b/capi/geos_c.h.in
@@ -3317,7 +3317,7 @@ extern int GEOS_DLL GEOSPreparedDistance(
 /**
 * Using a \ref GEOSPreparedDistanceWithin do a high performance
 * calculation to find whether the prepared and provided geometry
-* is within the given max distance.
+* are within the given max distance.
 * Useful for situations where
 * one geometry is large and static and needs to be tested
 * against a large number of other geometries.
@@ -3987,7 +3987,8 @@ extern int GEOS_DLL GEOSDistance(
     double *dist);
 
 /**
-* Calculate the distance between two geometries.
+* Test whether the distance between two geometries is
+* within the given dist.
 * \param[in] g1 Input geometry
 * \param[in] g2 Input geometry
 * \param[in] dist max distance
