Use OBJECT library to build ryu, so it can be fully included in static libgeos.a, and up the cmake requirement to 3.13 to support that change. References #1103

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,9 +9,9 @@
 # See the COPYING file for more information.
 ##############################################################################
 
-# Require CMake 3.8+ with support for meta-features that request compiler
-# modes for specific C/C++ language standard levels.
-cmake_minimum_required(VERSION 3.8)
+# Require CMake 3.13+ with support for meta-features that request compiler
+# modes for specific C/C++ language standard levels, and object libraries.
+cmake_minimum_required(VERSION 3.13)
 
 # Default to release build so packagers don't release debug builds
 set(DEFAULT_BUILD_TYPE Release)
