Use hardcoded post dates, not gitinfo

--- a/web/config.toml
+++ b/web/config.toml
@@ -5,7 +5,7 @@ theme = "hugo-geekdoc"
 pygmentsUseClasses = true
 pygmentsCodeFences = true
 disablePathToLower = true
-enableGitInfo = true
+enableGitInfo = false
 
 [params]
   current_release = "3.10.0"
