--- a/.azure-pipelines.yml
+++ b/.azure-pipelines.yml
@@ -53,18 +53,18 @@ stages:
         #   CXXSTD: 11
         #   CXX: g++-7
         #   PACKAGES: g++-7
-        GCC 6:
-          CXXSTD: 11
-          CXX: g++-6
-          PACKAGES: g++-6
+        # GCC 6:
+        #   CXXSTD: 11
+        #   CXX: g++-6
+        #   PACKAGES: g++-6
         # GCC 5:
         #   CXXSTD: 11
         #   CXX: g++-5
         #   PACKAGES: g++-5
-        GCC 4.8:
-          CXXSTD: 11
-          CXX: g++-4.8
-          PACKAGES: g++-4.8
+        # GCC 4.8:
+        #   CXXSTD: 11
+        #   CXX: g++-4.8
+        #   PACKAGES: g++-4.8
         Clang 12:
           CXXSTD: 11, 20
           CXX: clang++-12
@@ -85,16 +85,16 @@ stages:
           CXX: clang++-9
           PACKAGES: clang-9
           LLVM_REPO: llvm-toolchain-focal-9
-        Clang 8:
-          CXXSTD: 11
-          CXX: clang++-8
-          PACKAGES: clang-8
-          LLVM_REPO: llvm-toolchain-focal-8
-        Clang 7:
-          CXXSTD: 11
-          CXX: clang++-7
-          PACKAGES: clang-7
-          LLVM_REPO: llvm-toolchain-focal-7
+        # Clang 8:
+        #   CXXSTD: 11
+        #   CXX: clang++-8
+        #   PACKAGES: clang-8
+        #   LLVM_REPO: llvm-toolchain-focal-8
+        # Clang 7:
+        #   CXXSTD: 11
+        #   CXX: clang++-7
+        #   PACKAGES: clang-7
+        #   LLVM_REPO: llvm-toolchain-focal-7
         # Clang 6:
         #   CXXSTD: 11
         #   CXX: clang++-6.0
