use matrix to drive vmImage

--- a/.azure-pipelines.yml
+++ b/.azure-pipelines.yml
@@ -29,82 +29,98 @@ stages:
   jobs:
 
   - job: 'Linux'
-    pool:
-      vmImage: 'ubuntu-20.04'
     strategy:
       matrix:
         GCC 11:
           CXXSTD: 11, 20
           CXX: g++-11
           PACKAGES: g++-11
+          VM_IMAGE: ubuntu-20.04
         GCC 10:
           CXXSTD: 11, 17
           CXX: g++-10
           PACKAGES: g++-10
+          VM_IMAGE: ubuntu-20.04
         GCC 9:
           CXXSTD: 11, 14
           CXX: g++-9
           PACKAGES: g++-9
+          VM_IMAGE: ubuntu-20.04
         GCC 8:
           CXXSTD: 11
           CXX: g++-8
           PACKAGES: g++-8
+          VM_IMAGE: ubuntu-20.04
         GCC 7:
           CXXSTD: 11
           CXX: g++-7
           PACKAGES: g++-7
-        # GCC 6:
-        #   CXXSTD: 11
-        #   CXX: g++-6
-        #   PACKAGES: g++-6
-        # GCC 5:
-        #   CXXSTD: 11
-        #   CXX: g++-5
-        #   PACKAGES: g++-5
-        # GCC 4.8:
-        #   CXXSTD: 11
-        #   CXX: g++-4.8
-        #   PACKAGES: g++-4.8
+          VM_IMAGE: ubuntu-20.04
+        GCC 6:
+          CXXSTD: 11
+          CXX: g++-6
+          PACKAGES: g++-6
+          VM_IMAGE: ubuntu-18.04
+        GCC 5:
+          CXXSTD: 11
+          CXX: g++-5
+          PACKAGES: g++-5
+          VM_IMAGE: ubuntu-18.04
+        GCC 4.8:
+          CXXSTD: 11
+          CXX: g++-4.8
+          PACKAGES: g++-4.8
+          VM_IMAGE: ubuntu-18.04
         Clang 12:
           CXXSTD: 11, 20
           CXX: clang++-12
           PACKAGES: clang-12
           LLVM_REPO: llvm-toolchain-focal-12
+          VM_IMAGE: ubuntu-20.04
         Clang 11:
           CXXSTD: 11, 17
           CXX: clang++-11
           PACKAGES: clang-11
           LLVM_REPO: llvm-toolchain-focal-11
+          VM_IMAGE: ubuntu-20.04
         Clang 10:
           CXXSTD: 11, 14
           CXX: clang++-10
           PACKAGES: clang-10
           LLVM_REPO: llvm-toolchain-focal-10
+          VM_IMAGE: ubuntu-20.04
         Clang 9:
           CXXSTD: 11
           CXX: clang++-9
           PACKAGES: clang-9
           LLVM_REPO: llvm-toolchain-focal-9
-        # Clang 8:
-        #   CXXSTD: 11
-        #   CXX: clang++-8
-        #   PACKAGES: clang-8
-        #   LLVM_REPO: llvm-toolchain-focal-8
-        # Clang 7:
-        #   CXXSTD: 11
-        #   CXX: clang++-7
-        #   PACKAGES: clang-7
-        #   LLVM_REPO: llvm-toolchain-focal-7
+          VM_IMAGE: ubuntu-20.04
+        Clang 8:
+          CXXSTD: 11
+          CXX: clang++-8
+          PACKAGES: clang-8
+          LLVM_REPO: llvm-toolchain-bionic-8
+          VM_IMAGE: ubuntu-18.04
+        Clang 7:
+          CXXSTD: 11
+          CXX: clang++-7
+          PACKAGES: clang-7
+          LLVM_REPO: llvm-toolchain-bionic-7
+          VM_IMAGE: ubuntu-18.04
         # Clang 6:
         #   CXXSTD: 11
         #   CXX: clang++-6.0
         #   PACKAGES: clang-6.0
-        #   LLVM_REPO: llvm-toolchain-focal-6.0
+        #   LLVM_REPO: llvm-toolchain-bionic-6.0
+        #   VM_IMAGE: ubuntu-18.04
         # Clang 5:
         #   CXXSTD: 11
         #   PACKAGES: clang-5.0
         #   CXX: clang++-5.0
-        #   LLVM_REPO: llvm-toolchain-focal-5.0
+        #   LLVM_REPO: llvm-toolchain-bionic-5.0
+        #   VM_IMAGE: ubuntu-18.04
+    pool:
+      vmImage: $(VM_IMAGE)
     steps:
     - script: |
         set -e
