--- a/.azure-pipelines.yml
+++ b/.azure-pipelines.yml
@@ -29,64 +29,114 @@ stages:
   jobs:
 
   - job: 'Linux'
-    pool:
-      vmImage: 'ubuntu-18.04'
     strategy:
       matrix:
+        GCC 11:
+          CXXSTD: 11, 20
+          CXX: g++-11
+          PACKAGES: g++-11
+          VM_IMAGE: ubuntu-20.04
+          VM_NAME: focal
+        GCC 10:
+          CXXSTD: 11, 17
+          CXX: g++-10
+          PACKAGES: g++-10
+          VM_IMAGE: ubuntu-20.04
+          VM_NAME: focal
+        GCC 9:
+          CXXSTD: 11, 14
+          CXX: g++-9
+          PACKAGES: g++-9
+          VM_IMAGE: ubuntu-20.04
+          VM_NAME: focal
         GCC 8:
-          CXXSTD: 11, 14, 17, 20
+          CXXSTD: 11
           CXX: g++-8
           PACKAGES: g++-8
+          VM_IMAGE: ubuntu-20.04
+          VM_NAME: focal
         GCC 7:
-          CXXSTD: 11, 14, 17
+          CXXSTD: 11
           CXX: g++-7
           PACKAGES: g++-7
+          VM_IMAGE: ubuntu-20.04
+          VM_NAME: focal
         GCC 6:
-          CXXSTD: 11, 14
+          CXXSTD: 11
           CXX: g++-6
           PACKAGES: g++-6
+          VM_IMAGE: ubuntu-18.04
+          VM_NAME: focal
         GCC 5:
           CXXSTD: 11
           CXX: g++-5
           PACKAGES: g++-5
-        # GCC 4.9:
-        #   CXXSTD: 11
-        #   CXX: g++-4.9
-        #   PACKAGES: g++-4.9
+          VM_IMAGE: ubuntu-18.04
+          VM_NAME: focal
         GCC 4.8:
           CXXSTD: 11
           CXX: g++-4.8
           PACKAGES: g++-4.8
+          VM_IMAGE: ubuntu-18.04
+          VM_NAME: focal
+        Clang 12:
+          CXXSTD: 11, 20
+          CXX: clang++-12
+          PACKAGES: clang-12
+          LLVM_REPO: llvm-toolchain-focal-12
+          VM_IMAGE: ubuntu-20.04
+          VM_NAME: focal
+        Clang 11:
+          CXXSTD: 11, 17
+          CXX: clang++-11
+          PACKAGES: clang-11
+          LLVM_REPO: llvm-toolchain-focal-11
+          VM_IMAGE: ubuntu-20.04
+          VM_NAME: focal
         Clang 10:
-          CXXSTD: 11, 14, 17, 20
+          CXXSTD: 11, 14
           CXX: clang++-10
           PACKAGES: clang-10
-          LLVM_REPO: llvm-toolchain-bionic-10
+          LLVM_REPO: llvm-toolchain-focal-10
+          VM_IMAGE: ubuntu-20.04
+          VM_NAME: focal
         Clang 9:
-          CXXSTD: 11, 14, 17, 20
+          CXXSTD: 11
           CXX: clang++-9
           PACKAGES: clang-9
-          LLVM_REPO: llvm-toolchain-bionic-9
+          LLVM_REPO: llvm-toolchain-focal-9
+          VM_IMAGE: ubuntu-20.04
+          VM_NAME: focal
         Clang 8:
-          CXXSTD: 11, 14, 17
+          CXXSTD: 11
           CXX: clang++-8
           PACKAGES: clang-8
           LLVM_REPO: llvm-toolchain-bionic-8
+          VM_IMAGE: ubuntu-18.04
+          VM_NAME: bionic
         Clang 7:
-          CXXSTD: 11, 14
+          CXXSTD: 11
           CXX: clang++-7
           PACKAGES: clang-7
           LLVM_REPO: llvm-toolchain-bionic-7
-        Clang 6:
-          CXXSTD: 11, 14
-          CXX: clang++-6.0
-          PACKAGES: clang-6.0
-          LLVM_REPO: llvm-toolchain-bionic-6.0
-        Clang 5:
-          CXXSTD: 11, 14
-          PACKAGES: clang-5.0
-          CXX: clang++-5.0
-          LLVM_REPO: llvm-toolchain-bionic-5.0
+          VM_IMAGE: ubuntu-18.04
+          VM_NAME: bionic
+        # Clang 6:
+        #   CXXSTD: 11
+        #   CXX: clang++-6.0
+        #   PACKAGES: clang-6.0
+        #   LLVM_REPO: llvm-toolchain-bionic-6.0
+        #   VM_IMAGE: ubuntu-18.04
+        #   VM_NAME: bionic
+        # Clang 5:
+        #   CXXSTD: 11
+        #   PACKAGES: clang-5.0
+        #   CXX: clang++-5.0
+        #   LLVM_REPO: llvm-toolchain-bionic-5.0
+        #   VM_IMAGE: ubuntu-18.04
+        #   VM_NAME: bionic
+    pool:
+      vmImage: $(VM_IMAGE)
     steps:
     - script: |
         set -e
@@ -94,7 +144,7 @@ stages:
         sudo -E apt-add-repository -y "ppa:ubuntu-toolchain-r/test"
         if test -n "${LLVM_REPO}" ; then
           wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key | sudo apt-key add -
-          sudo -E apt-add-repository "deb http://apt.llvm.org/bionic/ ${LLVM_REPO} main"
+          sudo -E apt-add-repository "deb http://apt.llvm.org/${VM_NAME}/ ${LLVM_REPO} main"
         fi
         sudo -E apt-get update
         sudo -E apt-get -yq --no-install-suggests --no-install-recommends install cmake ${PACKAGES}
@@ -129,34 +179,28 @@ stages:
         ctest -V --output-on-failure -C $BUILD_TYPE
       displayName: 'Build C++17'
       condition: contains(variables['CXXSTD'], '17')
-    # - script: |
-    #     set -e
-    #     mkdir build.cxx20
-    #     cd build.cxx20
-    #     cmake --version
-    #     cmake -DCMAKE_CXX_STANDARD=20 -DCMAKE_BUILD_TYPE=$BUILD_TYPE ..
-    #     cmake --build . --config $BUILD_TYPE
-    #     ctest -V --output-on-failure -C $BUILD_TYPE
-    #   displayName: 'Build C++20'
-    #   condition: contains(variables['CXXSTD'], '20')
+    - script: |
+        set -e
+        mkdir build.cxx20
+        cd build.cxx20
+        cmake --version
+        cmake -DCMAKE_CXX_STANDARD=20 -DCMAKE_BUILD_TYPE=$BUILD_TYPE ..
+        cmake --build . --config $BUILD_TYPE
+        ctest -V --output-on-failure -C $BUILD_TYPE
+      displayName: 'Build C++20'
+      condition: contains(variables['CXXSTD'], '20')
 
   - job: 'Windows'
     strategy:
       matrix:
-        #Disabled until MSVC 16.4 is released
-        #(see https://developercommunity.visualstudio.com/content/problem/726778/this-snippet-compiles-totally-fine-on-godbolt-msvc.html?childToView=744771#comment-744771)
-        VS 2019 C++20 Strict:
+        # VS 2022 C++20:
+        #   TOOLSET: msvc-14.3
+        #   CXXSTD: 20
+        #   VM_IMAGE: 'windows-2022'
+        VS 2019 C++20:
           TOOLSET: msvc-14.2
           CXXSTD: 20
           VM_IMAGE: 'windows-2019'
-        VS 2017 C++17:
-          TOOLSET: msvc-14.1
-          CXXSTD: 17
-          VM_IMAGE: 'vs2017-win2016'
-        VS 2017 C++14:
-          TOOLSET: msvc-14.1
-          CXXSTD: 14 # default
-          VM_IMAGE: 'vs2017-win2016'
     pool:
       vmImage: $(VM_IMAGE)
     steps:
@@ -184,19 +228,22 @@ stages:
 
   - job: 'macOS'
     pool:
-      vmImage: 'macOS-10.14'
+      vmImage: 'macOS-10.15'
     strategy:
       matrix:
-        Xcode 10.1:
+        # https://github.com/actions/virtual-environments/blob/main/images/macos/macos-10.15-Readme.md#xcode
+        Xcode 12.4:
           TOOLSET: clang
-          CXXSTD: 14, 17
-          XCODE_APP: /Applications/Xcode_10.1.app
-        Xcode 10.0:
-          CXXSTD: 14, 17
-          XCODE_APP: /Applications/Xcode_10.app
-        Xcode 9.4.1:
-          CXXSTD: 11, 14, 17
-          XCODE_APP: /Applications/Xcode_9.4.1.app
+          CXXSTD: 11, 14, 20
+          XCODE_APP: /Applications/Xcode_12.4.app
+        Xcode 11.7:
+          TOOLSET: clang
+          CXXSTD: 11, 17
+          XCODE_APP: /Applications/Xcode_11.7.app
+        Xcode 10.3:
+          TOOLSET: clang
+          CXXSTD: 11
+          XCODE_APP: /Applications/Xcode_10.3.app
     steps:
     - script: |
         set -e
